--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <!-- Step 4: Close the menu when a link is clicked. -->
-                    <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+                    <a class="nav-link" routerLink="/home/project-list" routerLinkActive="active">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['product-list']" routerLinkActive="active-link"
