--- a/src/app/pages/home/upload-project/upload-project.component.html
+++ b/src/app/pages/home/upload-project/upload-project.component.html
@@ -1,9 +1,53 @@
-<div class="input-group input-group mb-3">
-    <span class="input-group-text" id="inputGroup-sizing-sm">Nome</span>
-    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-</div>
+@if(itemForm){
+<form [formGroup]="itemForm" (submit)="submit()">
+    <div class="row">
+        <div class="col">
+            <div class="input-group input-group mb-3">
+                <span class="input-group-text" id="title">Titulo</span>
+                <input type="text" class="form-control" formControlName="title" aria-label="Sizing example input"
+                    aria-describedby="title" name="title">
+            </div>
+        </div>
 
-<div class="input-group input-group mb-3">
-    <span class="input-group-text" id="inputGroup-sizing-sm">Nome</span>
-    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-</div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="input-group input-group mb-3">
+                <span class="input-group-text" id="client">Cliente</span>
+                <input type="text" class="form-control" formControlName="client" aria-label="Sizing example input"
+                    aria-describedby="client" name="client">
+            </div>
+        </div>
+        <div class="col">
+            <div class="input-group input-group mb-3">
+                <span class="input-group-text" id="type">Tipo</span>
+                <input type="text" class="form-control" formControlName="type" aria-label="Sizing example input"
+                    aria-describedby="type" name="type">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="input-group input-group mb-3">
+                <span class="input-group-text" id="address">Endereço</span>
+                <input type="text" class="form-control" formControlName="address" aria-label="Sizing example input"
+                    aria-describedby="address" name="address">
+            </div>
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="addNew" formControlName="addNew" checked>
+                <label class="form-check-label" for="addNew">
+                    Adicionar novos items
+                </label>
+            </div>
+        </div>
+        <div class="col d-flex justify-content-end">
+            <button class="btn btn-primary" type="submit">Avançar</button>
+        </div>
+    </div>
+
+</form>
+}
