--- a/src/app/shared/components/page-header/page-header.component.html
+++ b/src/app/shared/components/page-header/page-header.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between mb-4">
-    <p class="fs-4 text-lg-end fw-semibold lh-lg mb-0">
+    <p class="fs-4 text-lg-end fw-semibold lh-lg mb-0 p-0">
         {{pageTitle}}
     </p>
     @if(buttonOptions.display){
