--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -7,7 +7,7 @@
 <!-- list and view -->
 <div class="row">
     <div class="col">
-        <app-product-list-list></app-product-list-list>
+        <app-product-list-list [listData]="list"></app-product-list-list>
     </div>
     <div class="col-4">
         <app-product-list-view></app-product-list-view>
