added toast, upload notification and list items

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,3 +4,5 @@
 <div class="visually-hidden">
     <input type="file" [accept]="fileTypes" (change)="onFileChange($event)" #file>
 </div>
+
+<app-toast> </app-toast>
