--- a/src/app/pages/home/upload-project/upload-project.component.html
+++ b/src/app/pages/home/upload-project/upload-project.component.html
@@ -35,15 +35,18 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <app-product-list-list [listData]="list"></app-product-list-list>
+    </div>
     <div class="row ">
-        <div class="col">
+        <!-- <div class="col">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="addNew" formControlName="addNew" checked>
                 <label class="form-check-label" for="addNew">
                     Adicionar novos items
                 </label>
             </div>
-        </div>
+        </div> -->
         <div class="col d-flex justify-content-end">
             <button class="btn btn-primary" type="submit">Avançar</button>
         </div>
