--- a/src/app/pages/product-list/list/list.component.html
+++ b/src/app/pages/product-list/list/list.component.html
@@ -1,34 +1,45 @@
 <table class="table table-striped">
     <thead>
-        <th class="user-select-none" scope="col">EDIT</th>
-        <th class="user-select-none" scope="col" sortable="id" (sort)="onSort($event)">ID</th>
-        <th class="user-select-none" scope="col" sortable="image" (sort)="onSort($event)">IMAGEM</th>
-        <th class="user-select-none" scope="col" sortable="name" (sort)="onSort($event)">NOME</th>
+        <th class="user-select-none" style="width: 2em" scope="col">EDIT</th>
+        <th class="user-select-none" style="width: 140px" scope="col" sortable="image" (sort)="onSort($event)">IMAGEM
+        </th>
         <th class="user-select-none" scope="col" sortable="description" (sort)="onSort($event)">DESCRIÇÃO</th>
-        <th class="user-select-none" scope="col" sortable="unit" (sort)="onSort($event)">UN</th>
+        <th class="user-select-none" style="width: 100px" scope="col" sortable="unit" (sort)="onSort($event)">QUANT
+        </th>
     </thead>
     <tbody>
-        @for(item of listData; track item.id){
+        @for(item of listData; track item.description){
         <tr>
             <td>
                 <button class="btn btn-primary" (click)="handleEditClick(item)">
                     <i class="bi bi-pencil-square"></i>
                 </button>
             </td>
-            <td>
-                {{item.id}}
+
+            @if(item.image){ <td style="text-align: center;">
+                <img [src]="item.image" style="height: 50px;" class=" rounded img-fluid" [alt]="item.description">
             </td>
-            <td>
-                <img [src]="item.image" style="height: 50px;" class=" rounded img-fluid" [alt]="item.name">
+            } @else {
+            <td style="text-align: center;" id="drop-area">
+                <div class="d-flex align-items-center justify-content-center" (dragover)="onDragOver($event)"
+                    (dragenter)="onDragEnter($event)" (dragleave)="onDragLeave($event)" (drop)="onDrop($event)">
+
+                    <i class="bi bi-cloud-upload"></i>
+
+                    <div class="flex-shrink-1">
+
+                        Araste uma imagem
+                    </div>
+                </div>
             </td>
-            <td>
-                {{item.name}}
-            </td>
+            }
+
+
             <td>
                 {{item.description}}
             </td>
             <td>
-                {{item.unit}}
+                {{item.quantity}}
             </td>
 
         </tr>
