--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -9,11 +9,11 @@
                     <!-- Step 4: Close the menu when a link is clicked. -->
                     <a class="nav-link" routerLink="/home/project-list" routerLinkActive="active">Home</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" [routerLink]="['product-list']" routerLinkActive="active-link"
                         [routerLinkActiveOptions]="{exact: true}">Lista de
                         partes</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
