--- a/src/app/pages/home/upload-project/upload-project.component.html
+++ b/src/app/pages/home/upload-project/upload-project.component.html
@@ -38,8 +38,8 @@
     <div class="row">
         <div class="row">
             <div class="col">
-                <app-product-list-list [listData]="list"
-                    (selection)="handleSelectedItem($event)"></app-product-list-list>
+                <app-product-list-list [listData]="list" (selection)="handleSelectedItem($event)"
+                    (updateItem)="listUpdateHandler($event)"></app-product-list-list>
             </div>
             <!-- <div class="col-4">
                 <app-product-list-view></app-product-list-view>
