--- a/src/app/pages/home/upload-project/upload-project.component.html
+++ b/src/app/pages/home/upload-project/upload-project.component.html
@@ -39,7 +39,8 @@
         <div class="row">
             <div class="col">
                 <app-product-list-list [listData]="list" (selection)="handleSelectedItem($event)"
-                    (updateItem)="listUpdateHandler($event)"></app-product-list-list>
+                    (updateItem)="listUpdateHandler($event)"
+                    (imageListChange)="updateImageList($event)"></app-product-list-list>
             </div>
             <!-- <div class="col-4">
                 <app-product-list-view></app-product-list-view>
