--- a/src/app/pages/product-list/list/img-uploader-cell/img-uploader-cell.component.html
+++ b/src/app/pages/product-list/list/img-uploader-cell/img-uploader-cell.component.html
@@ -1,12 +1,18 @@
-<td style="text-align: center;" id="drop-area">
+<div #dropArea class="p-2" (dragover)="onDragOver($event)" (dragenter)="onDragEnter($event)"
+    (dragleave)="onDragLeave($event)" (drop)="onDrop($event)">
+
+    @if(item.imageUrl){
+    <img [src]="item.imageUrl" style="height: 50px;" class=" rounded img-fluid" [alt]="item.description"
+        (dragover)="onDragOver($event)" (dragenter)="onDragEnter($event)" (dragleave)="onDragLeave($event)"
+        (drop)="onDrop($event)">
+    }@else {
     <div class="d-flex align-items-center justify-content-center" (dragover)="onDragOver($event)"
         (dragenter)="onDragEnter($event)" (dragleave)="onDragLeave($event)" (drop)="onDrop($event)">
-
         <i class="bi bi-cloud-upload"></i>
-
         <div class="flex-shrink-1">
-
             Araste uma imagem
         </div>
     </div>
-</td>
+    }
+
+</div>
